--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,2 @@
-<div>
-  <button (click)="addAnimal('Носорог')">Animal</button>
-
-  <p>
-    {{ (animals$ | async).name }}
-  </p>
-</div>
-
-<mat-card>
-  hello
-</mat-card>
-
+<bg-header></bg-header>
 <router-outlet></router-outlet>
