--- a/frontend/src/app/core/components/header/header.component.html
+++ b/frontend/src/app/core/components/header/header.component.html
@@ -4,9 +4,21 @@
     Мой бюджет
   </h1>
 
-  <mat-tab-group mat-align-tabs="center">
+  <!-- <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Главная">Главная</mat-tab>
     <mat-tab label="История">История</mat-tab>
     <mat-tab label="Статистика">Статистика</mat-tab>
-  </mat-tab-group>
+  </mat-tab-group> -->
+
+  <nav mat-tab-nav-bar>
+    <a mat-tab-link
+      *ngFor="let link of links"
+      [routerLink]="link.href"
+      routerLinkActive
+      #rla="routerLinkActive"
+      [active]="rla.isActive"
+    >
+      {{ link.label }}
+    </a>
+  </nav>
 </header>
