--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,7 @@
-<bg-header></bg-header>
-<router-outlet></router-outlet>
+<div class="app">
+  <bg-header></bg-header>
+
+  <div class="app__main">
+    <router-outlet></router-outlet>
+  </div>
+</div>
