--- a/frontend/src/app/core/components/spinner/spinner.component.scss
+++ b/frontend/src/app/core/components/spinner/spinner.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(#fff, 0.3);
+  background-color: rgba(white, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
