Add spinner to state

--- a/frontend/src/app/core/components/spinner/spinner.component.html
+++ b/frontend/src/app/core/components/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div class="spinner">
+<div class="spinner" *ngIf="spinner$ | async">
   <mat-progress-spinner [value]="50" [mode]="'indeterminate'" [color]="'primary'"></mat-progress-spinner>
 </div>
 
