Add account removing

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -19,3 +19,8 @@ body {
 	font-size: 16px;
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+button {
+  border: none;
+  background-color: transparent;
+}
