--- a/frontend/src/app/main/main/main.component.html
+++ b/frontend/src/app/main/main/main.component.html
@@ -1,3 +1,37 @@
 <div class="root">
+  <div class="main">
+    <div class="main--currency">
+      <mat-card>
+        Currency
+      </mat-card>
+    </div>
+
+    <div class="main--accounts">
+      <mat-card class="account" *ngFor="let account of accounts$ | async">
+        <mat-card-title>
+          {{ account.name }}
+        </mat-card-title>
+        <mat-card-subtitle>
+          {{ account.description }}
+        </mat-card-subtitle>
+        <!-- <mat-card-content>
+          {{ account | json }}
+        </mat-card-content> -->
+        <mat-card-actions>
+          <button mat-icon-button class="account--button" *ngFor="let button of buttons" (click)="button.click(account)">
+            <mat-icon>{{ button.icon }}</mat-icon>
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+
+    <div class="main--add">
+      <button mat-fab color="primary">
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+
+  </div>
+
   
 </div>
