Started adding flex grid

--- a/frontend/src/app/main/main/main.component.html
+++ b/frontend/src/app/main/main/main.component.html
@@ -25,7 +25,7 @@
       </mat-card>
     </div>
 
-    <div class="main--add">
+    <div class="main--add flex jc-center ai-center">
       <button mat-fab color="primary">
         <mat-icon>add</mat-icon>
       </button>
