--- a/frontend/src/app/main/main/main.component.scss
+++ b/frontend/src/app/main/main/main.component.scss
@@ -1,8 +1,18 @@
-.root {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.main {
+  position: relative;
+  display: grid;
+  grid-template-columns: 300px 1fr 100px;
+
+  &--add {
+    position: absolute;
+    right: 5rem;
+    top: 0;
+    transform: translateY(-50%);
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    background-color: red;
+  }
 }
 
 .account {
