--- a/frontend/src/app/main/main/main.component.html
+++ b/frontend/src/app/main/main/main.component.html
@@ -7,6 +7,26 @@
     </div>
 
     <div class="main--accounts">
+      <mat-form-field appearance="fill">
+        <mat-label>Choose a date</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+
+      <mat-card class="payment" *ngFor="let payment of payments$ | async">
+        <mat-card-title>
+          {{ payment.amount }}
+        </mat-card-title>
+        <mat-card-actions>
+          <button mat-icon-button class="account--button" *ngFor="let button of buttons" (click)="button.click(payment)">
+            <mat-icon>{{ button.icon }}</mat-icon>
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+
+    <!-- <div class="main--accounts">
       <mat-card class="account" *ngFor="let account of accounts$ | async">
         <mat-card-title>
           {{ account.name }}
@@ -14,16 +34,13 @@
         <mat-card-subtitle>
           {{ account.description }}
         </mat-card-subtitle>
-        <!-- <mat-card-content>
-          {{ account | json }}
-        </mat-card-content> -->
         <mat-card-actions>
           <button mat-icon-button class="account--button" *ngFor="let button of buttons" (click)="button.click(account)">
             <mat-icon>{{ button.icon }}</mat-icon>
           </button>
         </mat-card-actions>
       </mat-card>
-    </div>
+    </div> -->
 
     <div class="main--add flex jc-center ai-center">
       <button mat-fab color="primary" [matMenuTriggerFor]="menu">
