--- a/frontend/src/app/main/main/main.component.html
+++ b/frontend/src/app/main/main/main.component.html
@@ -1,46 +1,47 @@
 <div class="root">
   <div class="main">
-    <div class="main--currency">
-      <mat-card>
-        Currency
-      </mat-card>
-    </div>
-
-    <div class="main--accounts">
+    <form [formGroup]="form" (submit)="onSubmit()">
       <mat-form-field appearance="fill">
         <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker">
+        <input matInput [matDatepicker]="picker" formControlName="date">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Сумма</mat-label>
+        <input matInput formControlName="amount">
+      </mat-form-field>
+
+      <mat-card>
+        <mat-card-title>
+          Категории
+        </mat-card-title>
+        <mat-card-content>
+          <mat-radio-group formControlName="category">
+            <mat-radio-button *ngFor="let category of categories" [value]="category.id">
+              {{category.name}}
+            </mat-radio-button>
+          </mat-radio-group>
+        </mat-card-content>
+      </mat-card>
+
+      <button type="submit" [disabled]="form.invalid">Добавить</button>
+    </form>
+
+    <div class="main--accounts">
 
       <mat-card class="payment" *ngFor="let payment of payments$ | async">
         <mat-card-title>
           {{ payment.amount }}
         </mat-card-title>
-        <mat-card-actions>
+        <!-- <mat-card-actions>
           <button mat-icon-button class="account--button" *ngFor="let button of buttons" (click)="button.click(payment)">
             <mat-icon>{{ button.icon }}</mat-icon>
           </button>
-        </mat-card-actions>
+        </mat-card-actions> -->
       </mat-card>
     </div>
-
-    <!-- <div class="main--accounts">
-      <mat-card class="account" *ngFor="let account of accounts$ | async">
-        <mat-card-title>
-          {{ account.name }}
-        </mat-card-title>
-        <mat-card-subtitle>
-          {{ account.description }}
-        </mat-card-subtitle>
-        <mat-card-actions>
-          <button mat-icon-button class="account--button" *ngFor="let button of buttons" (click)="button.click(account)">
-            <mat-icon>{{ button.icon }}</mat-icon>
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div> -->
 
     <div class="main--add flex jc-center ai-center">
       <button mat-fab color="primary" [matMenuTriggerFor]="menu">
@@ -53,6 +54,7 @@
         </button>
       </mat-menu>
     </div>
+
 
   </div>
 
