Started adding user

--- a/frontend/src/app/core/components/header/header.component.html
+++ b/frontend/src/app/core/components/header/header.component.html
@@ -1,8 +1,14 @@
 <header class="header">
+  <div class="header--top">
+    <h1 class="header--title">
+      Мой бюджет
+    </h1>
 
-  <h1 class="header--title">
-    Мой бюджет
-  </h1>
+    <div class="header--user-info">
+      
+    </div>
+  </div>
+
 
   <nav mat-tab-nav-bar>
     <a mat-tab-link
