Started adding login page

--- a/frontend/src/app/login/login/login.component.html
+++ b/frontend/src/app/login/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<form [formGroup]="form" (submit)="onSubmit()">
+
+  <label for="email">Email</label>
+  <input formControlName="email" id="email" type="email">
+
+  <label for="password">password</label>
+  <input formControlName="password" id="password" type="password">
+
+  <button type="submit">
+    Login
+  </button>
+</form>
