--- a/frontend/src/app/login/login/login.component.html
+++ b/frontend/src/app/login/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (submit)="onSubmit()">
+<form [formGroup]="form" (submit)="onSubmit($event)">
 
   <label for="email">Email</label>
   <input formControlName="email" id="email" type="email">
