Add payment modal

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,19 @@
   <div class="app__main">
     <mat-sidenav-container>
       <mat-sidenav mode="side" [opened]="true">
-        Sidenav content
+        <div>
+          <ul>
+            <li>
+              Счет 1
+            </li>
+            <li>
+              Счет 2
+            </li>
+            <li>
+              Счет 3
+            </li>
+          </ul>
+        </div>
       </mat-sidenav>
 
       <mat-sidenav-content>
