--- a/frontend/src/app/main/modals/create-payment/create-payment.component.html
+++ b/frontend/src/app/main/modals/create-payment/create-payment.component.html
@@ -19,10 +19,10 @@
 
     <div>
       <label for="expense">Расходы</label>
-      <input formControlName="currency" id="expense" value="expense" type="radio">
+      <input formControlName="type" id="expense" value="expense" type="radio">
 
       <label for="income">Доходы</label>
-      <input formControlName="currency" id="income" value="income" type="radio">
+      <input formControlName="type" id="income" value="income" type="radio">
     </div>
 
     <button type="submit">Добавить</button>
