Add account mockup

--- a/frontend/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/frontend/src/app/core/layouts/main-layout/main-layout.component.html
@@ -1,23 +1,25 @@
-<div class="app">
-  <bg-header></bg-header>
+<div class="root">
+  <div class="main">
+    <bg-header></bg-header>
 
-  <div class="app__main">
-    <mat-sidenav-container>
-      <mat-sidenav mode="side" [opened]="false">
-        <div>
-          <ul>
-            <li *ngFor="let account of accounts$ | async">
-              <a [routerLink]="account.id">
-                {{ account.name }}
-              </a>
-            </li>
-          </ul>
-        </div>
-      </mat-sidenav>
-
-      <mat-sidenav-content>
-        <router-outlet></router-outlet>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
+    <div class="main__content">
+      <mat-sidenav-container class="main__sidenav">
+        <mat-sidenav mode="side" [opened]="false">
+          <div>
+            <ul>
+              <li *ngFor="let account of accounts$ | async">
+                <a [routerLink]="account.id">
+                  {{ account.name }}
+                </a>
+              </li>
+            </ul>
+          </div>
+        </mat-sidenav>
+  
+        <mat-sidenav-content>
+          <router-outlet></router-outlet>
+        </mat-sidenav-content>
+      </mat-sidenav-container>
+    </div>
   </div>
 </div>
