--- a/frontend/src/app/core/layouts/main-layout/main-layout.component.scss
+++ b/frontend/src/app/core/layouts/main-layout/main-layout.component.scss
@@ -3,3 +3,16 @@
 :host {
   max-width: $container-width;
 }
+
+.root {
+  height: 100%;
+}
+
+.main {
+  height: 100%;
+
+  &__content,
+  &__sidenav {
+    height: 100%;
+  }
+}
