--- a/frontend/src/app/modules/+accounts/components/account/account.component.scss
+++ b/frontend/src/app/modules/+accounts/components/account/account.component.scss
@@ -73,19 +73,18 @@
 .payments {
   width: 30rem;
 
-  &__date {
+  &__date + &__date {
+    margin-top: 5rem;
+  }
+
+  &__title {
     color: grey;
     font-weight: bold;
     font-size: 2.2rem;
-
-    &:last-of-type {
-      margin-top: 5rem;
-    }
   }
 
   .payments__payment:first-child {
     margin-top: 4rem;
-
   }
 }
 
