--- a/frontend/src/app/core/layouts/main-layout/main-layout.component.scss
+++ b/frontend/src/app/core/layouts/main-layout/main-layout.component.scss
@@ -12,7 +12,11 @@
   height: 100%;
 
   &__content,
-  &__sidenav {
+  &__sidenav-container {
     height: 100%;
+  }
+
+  &__sidenav {
+    width: 20rem;
   }
 }
