--- a/frontend/src/app/modules/+accounts/components/accounts/accounts.component.html
+++ b/frontend/src/app/modules/+accounts/components/accounts/accounts.component.html
@@ -1,3 +1,15 @@
-<div>
-  <router-outlet></router-outlet>
+<div class="root">
+
+  <div class="accounts">
+
+    <button
+      mat-button
+      color="primary"
+      class="accounts--button"
+      (click)="onAddAccount()"
+    >
+      Добавить счет
+    </button>
+
+  </div>
 </div>
