--- a/frontend/src/app/modules/+accounts/components/statistics/statistics.component.html
+++ b/frontend/src/app/modules/+accounts/components/statistics/statistics.component.html
@@ -1,3 +1,3 @@
-<div class="root" [hidden]="!chart">
+<div class="root" [hidden]="isCreated">
   <canvas #chart width="400" height="400"></canvas>
 </div>
