--- a/frontend/src/app/modules/+accounts/containers/statistics-container/statistics-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/statistics-container/statistics-container.component.html
@@ -1,3 +1,3 @@
-<bg-statistics
-  [payments]="payments$ | async"
-></bg-statistics>
+<ng-container *ngIf="payments$ | async as payments">
+  <bg-statistics [payments]="payments"></bg-statistics>
+</ng-container>
