--- a/frontend/src/app/modules/+accounts/components/history/history.component.html
+++ b/frontend/src/app/modules/+accounts/components/history/history.component.html
@@ -1,17 +1,22 @@
-<div class="root" *ngIf="currentAccount$ | async as currentAccount">
+<div class="history">
+  <table class="history__table" mat-table [dataSource]="payments">
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef>Категория</th>
+      <td mat-cell *matCellDef="let element">{{ element.category.name }}</td>
+    </ng-container>
 
-  <div class="history">
+    <ng-container matColumnDef="amount">
+      <th mat-header-cell *matHeaderCellDef>Сумма</th>
+      <td mat-cell *matCellDef="let element">{{ element.amount }}</td>
+    </ng-container>
 
-    <ul>
-      <li *ngFor="let payment of currentAccount.payments">
-        <div>
-          <div>{{ payment.category.name }}</div>
-          <div>{{ payment.amount }} {{ payment.currency }}  {{ payment.type }}</div>
-        </div>
-      </li>
-    </ul>
+    <ng-container matColumnDef="groupHeader">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element" colspan="2">{{ element.grouped }}</td>
+    </ng-container>
 
-
-  </div>
-
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['groupHeader']; when: isGroup"></tr>
+  </table>
 </div>
