Add payments by account id

--- a/frontend/src/app/modules/+accounts/components/account/account.component.html
+++ b/frontend/src/app/modules/+accounts/components/account/account.component.html
@@ -25,8 +25,8 @@
           </h3>
           <ul class="payments__list">
             <li class="payments__payment payment" *ngFor="let payment of account.payments">
-              <div class="payment__name" [style.color]="payment.category.color">
-                {{ payment.category.name }}
+              <div class="payment__name" [style.color]="payment?.category?.color">
+                {{ payment?.category?.name }}
               </div>
               <div class="payment__amount">
                 <span
