--- a/frontend/src/app/modules/+accounts/containers/account-container/account-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/account-container/account-container.component.html
@@ -1,7 +1,6 @@
-
-<div>eees</div>
 <ng-container *ngIf="currentAccount$ | async as currentAccount">
   <bg-account
     [account]="currentAccount"
+    [categories]="categories$ | async"
   ></bg-account>
 </ng-container>
