Add adding account

--- a/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.html
@@ -1,1 +1,18 @@
-<router-outlet></router-outlet>
+<div class="root">
+
+  <div class="accounts">
+
+    <button
+      mat-button
+      color="primary"
+      class="accounts--button"
+      (click)="onAddAccount()"
+    >
+      Добавить счет
+    </button>
+
+  </div>
+
+  <router-outlet></router-outlet>
+</div>
+
