--- a/frontend/src/app/core/components/header/header.component.html
+++ b/frontend/src/app/core/components/header/header.component.html
@@ -9,6 +9,8 @@
     </div>
 
     <button (click)="showSidenav.emit()">Сайдбар</button>
+
+    <button (click)="logout.emit()">Logout</button>
   </div>
 
   <nav mat-tab-nav-bar backgroundColor="primary">
