--- a/frontend/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/frontend/src/app/core/layouts/main-layout/main-layout.component.html
@@ -2,6 +2,7 @@
   <div class="main">
     <bg-header
       (showSidenav)="isSidenavShown = !isSidenavShown"
+      (logout)="onLogout()"
     ></bg-header>
 
     <div class="main__content">
