--- a/frontend/src/app/modules/+login/login/login.component.html
+++ b/frontend/src/app/modules/+login/login/login.component.html
@@ -1,12 +1,16 @@
-<form [formGroup]="form" (submit)="onSubmit($event)">
-
-  <label for="email">Email</label>
-  <input formControlName="email" id="email" type="email">
-
-  <label for="password">password</label>
-  <input formControlName="password" id="password" type="password">
-
-  <button type="submit">
-    Login
-  </button>
-</form>
+<div class="root">
+  <form [formGroup]="form" (submit)="onSubmit($event)">
+  
+    <label for="email">Email</label>
+    <input formControlName="email" id="email" type="email">
+  
+    <label for="password">password</label>
+    <input formControlName="password" id="password" type="password">
+  
+    <button type="submit">
+      Login
+    </button>
+  </form>
+  
+  <a [routerLink]="['/signup']">Sign Up</a>
+</div>
