[Frontend] Add adding category

--- a/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.html
@@ -11,6 +11,14 @@
       Добавить счет
     </button>
 
+    <button
+      mat-button
+      color="primary"
+      class="accounts--button"
+      (click)="onAddCategory()"
+    >
+      Добавить категорию
+    </button>
   </div>
 
   <router-outlet></router-outlet>
