--- a/frontend/src/app/modules/+accounts/modals/create-category/create-category.component.html
+++ b/frontend/src/app/modules/+accounts/modals/create-category/create-category.component.html
@@ -1,25 +1,20 @@
 <div class="root">
 
-  <div class="account">
+  <div class="category">
 
     <form
-      class="account--form form"
+      class="category--form form"
       [formGroup]="form"
       (submit)="onSubmit($event)"
     >
       <mat-form-field class="form--control">
         <mat-label>Название</mat-label>
-        <input matInput placeholder="Мой счет" formControlName="name">
+        <input matInput placeholder="Спорт" formControlName="name">
       </mat-form-field>
 
       <mat-form-field class="form--control">
-        <mat-label>Описание</mat-label>
-        <textarea matInput formControlName="description"></textarea>
-      </mat-form-field>
-
-      <mat-form-field class="form--control">
-        <mat-label>Валюта</mat-label>
-        <input matInput placeholder="USD" formControlName="currency">
+        <mat-label>Цвет</mat-label>
+        <input matInput type="color" formControlName="color">
       </mat-form-field>
 
       <div class="form--buttons">
@@ -33,9 +28,6 @@
           Создать
         </button>
       </div>
-
     </form>
-
   </div>
-
 </div>
