--- a/frontend/src/app/modules/+accounts/modals/create-payment/create-payment.component.html
+++ b/frontend/src/app/modules/+accounts/modals/create-payment/create-payment.component.html
@@ -16,11 +16,6 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-  
-        <!-- <mat-form-field class="form__control">
-          <mat-label>Цвет</mat-label>
-          <input matInput type="color" formControlName="categoryColor">
-        </mat-form-field> -->
       </div>
 
       <div class="form__control-group">
@@ -29,9 +24,18 @@
           <input matInput type="number" formControlName="amount">
         </mat-form-field>
   
-        <mat-form-field class="form__control">
+        <mat-form-field class="form__control" *ngIf="currencies$ | async as currencies">
           <mat-label>Валюта</mat-label>
-          <input matInput formControlName="currency">
+          <mat-select
+            (selectionChange)="onCurrencyChange($event)"
+          >  
+            <mat-option
+              *ngFor="let currency of Object.values(currencies)"
+              [value]="currency.id"
+            >
+              {{ currency.name }}
+            </mat-option>
+          </mat-select>
         </mat-form-field>
       </div>
 
