Add currency dictionary

--- a/frontend/src/app/modules/+accounts/containers/account-container/account-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/account-container/account-container.component.html
@@ -2,5 +2,6 @@
   <bg-account
     [account]="currentAccount"
     [categories]="categories$ | async"
+    [currencies]="currencies$ | async"
   ></bg-account>
 </ng-container>
